--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "fatma can",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
